fixed heading alignment

--- a/public/styles/posts.css
+++ b/public/styles/posts.css
@@ -11,6 +11,7 @@
 .blog-post h6 {
     margin-top: 2rem;
     margin-bottom: 1rem;
+    text-align: left;
 }
 
 .blog-post pre {
